Fix header title alignment using flexbox instead of floats

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -9,14 +9,20 @@
   background-color: $background-color;
   border-top: 5px solid $border-color-03;
   border-bottom: 1px solid $border-color-01;
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
+
 
 .site-title {
   @include relative-font-size(1.625);
   font-weight: 300;
   letter-spacing: -1px;
   margin-bottom: 0;
-  float: left;
 
   @include media-query($on-palm) {
     padding-right: 45px;
@@ -29,7 +35,6 @@
 }
 
 .site-nav {
-  float: right;
   border: none;
   background-color: inherit;
 
